# converter_bot

./: .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml
converter_bot/: __init__.py  config.py
converter_bot/commands_handlers/: clear_states_command.py
converter_bot/keywords_handlers/: file_to_file_conversion_keyword.py  img_to_file_conversion_keyword.py
converter_bot/keywords_handlers/keywords_utils/: document_checks.py  file_size_controller.py  filename_changer.py  filer_loader.py  image_to_file_converter.py  pdf_docx_converter.py  quality_reducer.py
tests/: conftest.py  test_filename_changer.py
